# KazTest

./: CMakeLists.txt  KAZTESTConfig.cmake  KazTest.files  LICENSE  README.md
include/kaztest/: kaztest.h
